syntax = "proto3";

package test.integration.filters;

message HeaderToFilterStateFilterConfig {
  string header_name = 1;
  string state_name = 2;
}
